--- a/template/tmpl_doc.html.jinja
+++ b/template/tmpl_doc.html.jinja
@@ -3,6 +3,7 @@
 <head>
 <title> {{ domain.name }} - LogLab Document </title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8">
 <style>
 body {
   font-family: "Lato", sans-serif;
