--- a/template/tmpl_code.cs.jinja
+++ b/template/tmpl_code.cs.jinja
@@ -22,8 +22,7 @@ namespace {{ domain.name }}
     {
         public const string Event = "{{ ename }}";
         {% for fname in events[ename][-1][1]['fields'].keys() %}{% if fname != 'DateTime' %}/// <summary>{{ events[ename][-1][1]['fields'][fname][-1][1]['desc'] }}</summary>
-        public {{ json2cs[events[ename][-1][1   ]['fields'][fname][-1][1]['type']] }} {{ fname }} { get; set; }
-        {% endif %}
+        public {{ json2cs[events[ename][-1][1   ]['fields'][fname][-1][1]['type']] }} {{ fname }} { get; set; }{% endif %}
         {% endfor %}
         public string Serialize()
         {
