python log object

--- a/template/tmpl_obj.cs.jinja
+++ b/template/tmpl_obj.cs.jinja
@@ -1,6 +1,6 @@
 /*
 
-    ** 이 파일은 loglab 에서 생성된 것입니다. 고치지 마세요! **
+    ** {{ warn }} **
 
     Domain: {{ domain.name }}
     Description: {{ domain.desc }}
