--- a/template/tmpl_obj.cs.jinja
+++ b/template/tmpl_obj.cs.jinja
@@ -9,6 +9,7 @@
 
 using System;
 using System.Collections.Generic;
+using System.Diagnostics;
 
 namespace loglab_{{ domain.name }}
 {
@@ -24,12 +25,13 @@ namespace loglab_{{ domain.name }}
         public const string Event = "{{ ename }}";
         {% for fname in fields.keys() %}{% if fname != 'DateTime' %}        // {{ events[ename][-1][1]['fields'][fname][-1][1]['desc'] }}
         {% set field = fields[fname][-1][1] %}
-        {% if 'option' in field and field['option'] %}
-        public {{ type(field) }}? {{ fname }} = null;
-        {% else %}
+        {% if type(field) == 'string' %}
         public {{ type(field) }} {{ fname }};
+        {% else %}
+        public {{ type(field) }}? {{ fname }} = null;
         {% endif %}{% endif %}{% endfor %}
 
+        public {{ ename }}() {}
         public {{ ename }}({% for fname in rfields.keys() %}{% set field = fields[fname][-1][1] %}{{ type(field) }} _{{ fname }}{% if not loop.last %}, {% endif %}{% endfor %})
         {
             Reset({% for fname in rfields.keys() %}{% set field = fields[fname][-1][1] %}_{{ fname }}{% if not loop.last %}, {% endif %}{% endfor %});
@@ -51,9 +53,18 @@ namespace loglab_{{ domain.name }}
             {% if fname != 'DateTime' %}
             {% set field = fields[fname][-1][1] %}
             {% if fname in rfields %}
+            {% if type(field) == 'string' %}
+            Debug.Assert({{ fname }} != null);
+            {% else %}
+            Debug.Assert({{ fname }}.HasValue);
+            {% endif %}
             fields.Add($"\"{{ fname }}\": {% if field['type'] == 'string' %}\"{% endif %}{% raw %}{{% endraw %}{{ fname }}{% raw %}}{% endraw %}{% if field['type'] == 'string' %}\"{% endif %}");
             {% else %}
+            {% if type(field) == 'string' %}
+            if ({{ fname }} != null)}})
+            {% else %}
             if ({{ fname }}.HasValue)
+            {% endif %}
                 fields.Add($"\"{{ fname }}\": {% if field['type'] == 'string' %}\"{% endif %}{% raw %}{{% endraw %}{{ fname }}{% raw %}}{% endraw %}{% if field['type'] == 'string' %}\"{% endif %}");
             {% endif %}
             {% endif %}
