--- a/template/tmpl_obj.cs.jinja
+++ b/template/tmpl_obj.cs.jinja
@@ -8,6 +8,10 @@
 */
 
 using System;
+using System.Text.Json;
+using System.Text.Json.Serialization;
+using System.Text.Encodings.Web;
+using System.Text.Unicode;
 using System.Collections.Generic;
 using System.Diagnostics;
 
@@ -30,6 +34,10 @@ namespace loglab_{{ domain.name }}
         {% else %}
         public {{ type(field) }}? {{ fname }} = null;
         {% endif %}{% endif %}{% endfor %}
+        public static JsonSerializerOptions options = new JsonSerializerOptions
+        {
+            Encoder = JavaScriptEncoder.UnsafeRelaxedJsonEscaping
+        };
 
         public {{ ename }}() {}
         public {{ ename }}({% for fname in rfields.keys() %}{% set field = fields[fname][-1][1] %}{{ type(field) }} _{{ fname }}{% if not loop.last %}, {% endif %}{% endfor %})
@@ -62,24 +70,26 @@ namespace loglab_{{ domain.name }}
             {% if fname in rfields %}
             {% if type(field) == 'string' %}
             Debug.Assert({{ fname }} != null);
+            {{ fname }} = JsonSerializer.Serialize({{ fname }}, {{ename}}.options);
             {% elif type(field) == 'DateTime' %}
             Debug.Assert({{ fname }} != DateTime.MinValue);
             string {{ fname }}_ = {{ fname }}.ToString("yyyy-MM-ddTHH:mm:sszzz");
             {% else %}
             Debug.Assert({{ fname }}.HasValue);
             {% endif %}
-            fields.Add($"\"{{ fname }}\": {% if field['type'] in ('string', 'datetime') %}\"{% endif %}{% raw %}{{% endraw %}{{ fname }}{% if field['type'] == 'datetime' %}_{% endif %}{% raw %}}{% endraw %}{% if field['type'] in ('string', 'datetime') %}\"{% endif %}");
+            fields.Add($"\"{{ fname }}\": {% if field['type'] == 'datetime' %}\"{% endif %}{% raw %}{{% endraw %}{{ fname }}{% if field['type'] == 'datetime' %}_{% endif %}{% raw %}}{% endraw %}{% if field['type'] == 'datetime' %}\"{% endif %}");
             {% else %}
             {% if type(field) == 'string' %}
-            if ({{ fname }} != null)
+            if ({{ fname }} != null) {
+                {{ fname }} = JsonSerializer.Serialize({{ fname }}, {{ename}}.options);
             {% elif type(field) == 'DateTime' %}
             if ({{ fname }} != DateTime.MinValue) {
                 string {{ fname }}_ = {{ fname }}.ToString("yyyy-MM-ddTHH:mm:sszzz");
             {% else %}
             if ({{ fname }}.HasValue)
             {% endif %}
-                fields.Add($"\"{{ fname }}\": {% if field['type'] in ('string', 'datetime') %}\"{% endif %}{% raw %}{{% endraw %}{{ fname }}{% if field['type'] == 'datetime' %}_{% endif %}{% raw %}}{% endraw %}{% if field['type'] in ('string', 'datetime') %}\"{% endif %}");
-            {% if type(field) == 'DateTime' %}
+                fields.Add($"\"{{ fname }}\": {% if field['type'] == 'datetime' %}\"{% endif %}{% raw %}{{% endraw %}{{ fname }}{% if field['type'] == 'datetime' %}_{% endif %}{% raw %}}{% endraw %}{% if field['type'] == 'datetime' %}\"{% endif %}");
+            {% if type(field) in ('string', 'DateTime') %}
             {% raw %}            }
             {% endraw %}{% endif %}
             {% endif %}
