--- a/template/tmpl_obj.cpp.jinja
+++ b/template/tmpl_obj.cpp.jinja
@@ -20,6 +20,24 @@
 
 namespace loglab_{{ domain.name }}
 {
+    class LogSerializer {
+    public:
+        static thread_local std::stringstream ss;
+        static thread_local std::string buffer;
+        
+        static std::string& SerializeToBuffer(const std::string& content) {
+            ss.clear();
+            ss.str("");
+            ss << content;
+            buffer = ss.str();
+            return buffer;
+        }
+    };
+    
+    // Thread-local static member definitions
+    thread_local std::stringstream LogSerializer::ss;
+    thread_local std::string LogSerializer::buffer;
+
 {% for name, elst in events.items() %}
 {% set edata = elst[-1] %}
 {% set edef = edata[1] %}
@@ -64,28 +82,29 @@ namespace loglab_{{ domain.name }}
 {% endfor %}
         }
 
-        std::string Serialize()
+        std::string& Serialize()
         {
-            std::stringstream ss;
-            ss << "{";
+            LogSerializer::ss.clear();
+            LogSerializer::ss.str("");
+            LogSerializer::ss << "{";
 
             // DateTime and Event
             auto now = std::chrono::system_clock::now();
             auto in_time_t = std::chrono::system_clock::to_time_t(now);
-            ss << "\"DateTime\":\"" << std::put_time(std::gmtime(&in_time_t), "%Y-%m-%dT%H:%M:%SZ") << "\",";
-            ss << "\"Event\":\"" << Event << "\"";
+            LogSerializer::ss << "\"DateTime\":\"" << std::put_time(std::gmtime(&in_time_t), "%Y-%m-%dT%H:%M:%SZ") << "\",";
+            LogSerializer::ss << "\"Event\":\"" << Event << "\"";
 
             // Required fields
 {% for fname, flst in (edef.fields|required).items() %}
 {% set fdef = flst[-1][1] %}
-            ss << ",";
-            ss << "\"{{ fname }}\":";
+            LogSerializer::ss << ",";
+            LogSerializer::ss << "\"{{ fname }}\":";
 {% if type(fdef) == 'std::string' %}
-            ss << "\"" << {{ fname }} << "\"";
+            LogSerializer::ss << "\"" << {{ fname }} << "\"";
 {% elif type(fdef) == 'bool' %}
-            ss << ({{ fname }} ? "true" : "false");
+            LogSerializer::ss << ({{ fname }} ? "true" : "false");
 {% else %}
-            ss << {{ fname }};
+            LogSerializer::ss << {{ fname }};
 {% endif %}
 {% endfor %}
 
@@ -94,20 +113,21 @@ namespace loglab_{{ domain.name }}
 {% set fdef = flst[-1][1] %}
             if ({{ fname }}.has_value())
             {
-                ss << ",";
-                ss << "\"{{ fname }}\":";
+                LogSerializer::ss << ",";
+                LogSerializer::ss << "\"{{ fname }}\":";
 {% if type(fdef) == 'std::string' %}
-                ss << "\"" << {{ fname }}.value() << "\"";
+                LogSerializer::ss << "\"" << {{ fname }}.value() << "\"";
 {% elif type(fdef) == 'bool' %}
-                ss << ({{ fname }}.value() ? "true" : "false");
+                LogSerializer::ss << ({{ fname }}.value() ? "true" : "false");
 {% else %}
-                ss << {{ fname }}.value();
+                LogSerializer::ss << {{ fname }}.value();
 {% endif %}
             }
 {% endfor %}
 
-            ss << "}";
-            return ss.str();
+            LogSerializer::ss << "}";
+            LogSerializer::buffer = LogSerializer::ss.str();
+            return LogSerializer::buffer;
         }
     };
 {% endfor %}
