--- a/template/tmpl_obj.py.jinja
+++ b/template/tmpl_obj.py.jinja
@@ -16,6 +16,7 @@ class {{ename}}:
     {% set fields = events[ename][-1][1]['fields'] %}
     {% set rfields = fields | required %}
     {% set ofields = fields | optional %}
+    {% set cfields = fields | const %}
 
     def __init__(self, {% for fname in rfields.keys() %}{% set field = fields[fname][-1][1] %}_{{ fname }}: {{ type(field) }}{% if not loop.last %}, {% endif %}{% endfor %}):
         self.reset({% for fname in rfields.keys() %}{% set field = fields[fname][-1][1] %}_{{ fname }}{% if not loop.last %}, {% endif %}{% endfor %})
@@ -23,8 +24,11 @@ class {{ename}}:
     def reset(self, {% for fname in rfields.keys() %}{% set field = fields[fname][-1][1] %}_{{ fname }}: {{ type(field) }}{% if not loop.last %}, {% endif %}{% endfor %}):
         {% for fname in fields.keys() %}{% if fname != 'DateTime'%}
         {% set field = fields[fname][-1][1] %}
-        self.{{fname}}{% if fname in ofields %} : Optional[{{ type(field) }}]{% if 'option' in field and field['option'] %}{% endif %} = None{% else %} = _{{ fname }}{% endif %}{% endif %}
-
+        {% if fname not in cfields %}
+        self.{{fname}} = {% if fname in ofields %}None
+        {% else %}_{{ fname }}
+        {% endif %}{% endif %}
+        {% endif %}
         {% endfor %}
 
     def serialize(self):
@@ -36,10 +40,14 @@ class {{ename}}:
         {% if fname in rfields %}
         data["{{ fname }}"] = self.{{ fname }}{% if type(field) == 'datetime' %}.isoformat(){% endif %}
 
-        {% else %}
+        {% elif fname in ofields %}
         if self.{{ fname }} is not None:
             data["{{ fname }}"] = self.{{ fname }}{% if type(field) == 'datetime' %}.isoformat(){% endif %}
-
+            
+        {% elif fname in cfields %}
+        {% set ftype, fval = cfields[fname] %}
+        data["{{ fname }}"] = {% if ftype == 'string' %}"{% endif %}{{ fval }}{% if ftype == 'string' %}"{% endif %}
+        
         {% endif %}
         {% endif %}
         {% endfor %}
